--- a/src/main/resources/templates/listadoEstudiantes.html
+++ b/src/main/resources/templates/listadoEstudiantes.html
@@ -63,6 +63,9 @@
 </head>
 <body>
     <h1 style=" font-size:20-large; color: palevioletred; text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Listado de Estudiantes 👩‍🎓</h1>
+    <div class = round>        
+        <h2 style=" text-align: center; font-size: medium; "><a style= "color: palevioletred; text-decoration: none;" th:href="@{/estudiantes/alta}">Dar de Alta</a></h2>
+    </div>
     <table>
         <thead>
             <tr>
