añadir facultad al listado completado

--- a/src/main/resources/templates/formularioAltaModificacion.html
+++ b/src/main/resources/templates/formularioAltaModificacion.html
@@ -8,7 +8,7 @@
         /* Contenedor general */
         body {
             font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color:#FEE6F4;
+            background-color:#000000;
             color: #222;
             margin: 0;
             padding: 2rem;
@@ -16,12 +16,12 @@
         
         
         form{
-            background: pink;
+            background: #FAF3E0 ;
             color: #111;
             font-weight: 600;
             text-align: left;
             padding: 0.75rem 0.9rem;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid rgb(226, 245, 61);
 
         }
 
@@ -29,19 +29,19 @@
             width: 450px; 
             margin: 40px auto; 
             padding: 5px; 
-            border: 2px solid palevioletred; 
+            border: 2px solid rgb(226, 245, 61); 
             border-radius: 15px; 
             text-align: left;
             box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
         }
 
         input:hover, button:hover{
-            background: #FEE6F4;
+            background: rgb(226, 245, 61);
         }
     </style>
 </head>
 <body>
-    <h1 style=" font-size:20-large; text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+    <h1 style="color:rgb(226, 245, 61); font-size:20-large; text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
         <a style="font-size: medium; text-decoration: none;" class="round" href="/estudiantes/listar">⬅️</a>
         Formulario de Alta/Modificación de Estudiantes ✏️
     </h1>
