--- a/src/main/resources/templates/formularioAltaModificacion.html
+++ b/src/main/resources/templates/formularioAltaModificacion.html
@@ -8,20 +8,20 @@
         /* Contenedor general */
         body {
             font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color:#000000;
-            color: #222;
+            background: rgb(183, 183, 183);
+            color: #000000;
             margin: 0;
             padding: 2rem;
         }
         
         
         form{
-            background: #FAF3E0 ;
+            background: rgb(183, 183, 183) ;
             color: #111;
             font-weight: 600;
             text-align: left;
             padding: 0.75rem 0.9rem;
-            border-bottom: 1px solid rgb(226, 245, 61);
+            border-bottom: 1px solid rgb(183, 183, 183);
 
         }
 
@@ -29,22 +29,37 @@
             width: 450px; 
             margin: 40px auto; 
             padding: 5px; 
-            border: 2px solid rgb(226, 245, 61); 
+            border: 2px solid #1E3A8A; 
             border-radius: 15px; 
             text-align: left;
             box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
         }
 
         input:hover, button:hover{
-            background: rgb(226, 245, 61);
+            background:#10B981
         }
+
+        h1{
+            background-color: #1E3A8A;
+            color: white;
+            text-align: left;
+        }
+
+        h2{
+            text-align: center;
+            color: #1E3A8A;
+        }
+
     </style>
 </head>
 <body>
-    <h1 style="color:rgb(226, 245, 61); font-size:20-large; text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-        <a style="font-size: medium; text-decoration: none;" class="round" href="/estudiantes/listar">⬅️</a>
+    <h1>
+       
+        EduTrack 👩‍🎓</h1>
+    <h2>
+         <a style="font-size: medium; text-decoration: none;" class="round" href="/estudiantes/listar">⬅️</a>
         Formulario de Alta/Modificación de Estudiantes ✏️
-    </h1>
+    </h2>
     <form class = round method="post" th:object="${estudiante}" th:action="@{/estudiantes/guardar}" enctype="multipart/form-data">
         <input type="hidden" th:field="*{id}">
         <label for="nombre">Nombre:</label>
